fixed bug with headings , anything that was extending the .h or h classes was getting all the headings styles including the ones in component spacing mixin. Have converted headings now to mixins with just the needed styles so things can safely include

--- a/scss/core/rwx-buttons.scss
+++ b/scss/core/rwx-buttons.scss
@@ -48,7 +48,7 @@
 	min-height:$button-size;
 	padding:0.75rem 1.5rem 0.75rem 1.5rem;
 	transition: all 0.7s $transition-base;
-	@extend .h6;
+	@include h6;
 	cursor:pointer;
 	&:hover, &:focus
 	{
